# chamge

./: .gitignore  README.md  azure-pipelines.yml  meson.build
agent/: agent.c  agent.h  arbiter-agent.c  arbiter-agent.h  edge-agent.c  edge-agent.h  meson.build
chamge/: amqp-arbiter-backend.c  amqp-arbiter-backend.h  amqp-edge-backend.c  amqp-edge-backend.h  amqp-hub-backend.c  amqp-hub-backend.h  amqp-source.c  amqp-source.h  arbiter-backend.c  arbiter-backend.h  arbiter.c  arbiter.h  chamge.h  common.c  common.h  edge-backend.c  edge-backend.h  edge.c  edge.h  enumtypes.h.template  hub-backend.c  hub-backend.h  hub.c  hub.h  hwangsaeul.conf  meson.build  mock-arbiter-backend.c  mock-arbiter-backend.h  mock-edge-backend.c  mock-edge-backend.h  mock-hub-backend.c  mock-hub-backend.h  node-backend.c  node-backend.h  node.c  node.h  org.hwangsaeul.Chamge1.Arbiter.AMQP.gschema.xml  org.hwangsaeul.Chamge1.Edge.AMQP.gschema.xml  org.hwangsaeul.Chamge1.Hub.AMQP.gschema.xml  types.c  (+1 more)
chamge/amqp/: amqp-rpc.c  amqp-rpc.h
chamge/dbus/: codegen.py  meson.build  org.hwangsaeul.Chamge1.Arbiter.Manager.xml  org.hwangsaeul.Chamge1.Edge.Manager.xml  org.hwangsaeul.Chamge1.Manager.xml  org.hwangsaeul.chamge.MQ1.xml  types.h
debian/: chamge-arbiter.install  chamge-arbiter.postinst  chamge-arbiter.service  chamge-dev.install  chamge-tools.install  chamge.install  changelog  control  copyright  libchamge-dev.install  libchamge1.install
doc/reference/: chamge-docs.xml  chamge.types  meson.build
examples/: arbiter-dummy.c  edge-dummy.c  hub-dummy.c  meson.build
glib-compat/: glib-compat.c  glib-compat.h  meson.build
hooks/: pre-commit.hook
hwangsaeul/: application.c  application.h  meson.build
tests/: meson.build  test-arbiter.c  test-edge.c  test-hub.c
